--- a/templates/teamhome.html
+++ b/templates/teamhome.html
@@ -8,7 +8,7 @@
 <li><a href="settings">Settings</a></li>
 {% endblock %}
 {% block navbar_right %}
-<li><a href="logout">Not {{ username }}? Logout</a></li>
+<li><a href="logout">Not {{ login_username }}? Logout</a></li>
 {% endblock %}
 
 {% block content %}
