--- a/templates/dnsinput.html
+++ b/templates/dnsinput.html
@@ -12,6 +12,7 @@
 {% endblock %}
 
 {% block content %}
+<h3>Edit DNS Credentials</h3>
       <form name = "form" action = "dnsSave" 
          method = "POST" >{% csrf_token %}
          
