--- a/templates/httpinput.html
+++ b/templates/httpinput.html
@@ -12,6 +12,7 @@
 {% endblock %}
 
 {% block content %}
+<h3>Edit HTTP Credentials</h3>
       <form name = "form" action = "httpSave" 
          method = "POST" >{% csrf_token %}
          
