--- a/templates/sqlinput.html
+++ b/templates/sqlinput.html
@@ -12,6 +12,7 @@
 {% endblock %}
 
 {% block content %}
+<h3>Edit MySQL Credentials</h3>
       <form name = "form" action = "sqlSave" 
          method = "POST" >{% csrf_token %}
          
