--- a/templates/ftpinput.html
+++ b/templates/ftpinput.html
@@ -1,7 +1,18 @@
+{% extends "base.html" %}
 
-<html>
-   <body>
-      
+{% block title %}FTP Credentials{% endblock %}
+
+{% block navbar_elements %}
+<li><a href="#">Overview</a></li>
+<li><a href="teamhome">Team Home</a></li>
+<li><a href="settings">Settings</a></li>
+{% endblock %}
+{% block navbar_right %}
+<li><a href="logout">Not {{ login_username }}? Logout</a></li>
+{% endblock %}
+
+{% block content %}
+<h3>Edit FTP Credentials</h3>
       <form name = "form" action = "ftpSave" 
          method = "POST" >{% csrf_token %}
          
@@ -47,7 +58,7 @@
                <button style = "border:0px; background-color:#4285F4; margin-top:8%;
                   height:35px; width:80%;margin-left:19%;" type = "submit" 
                   value = "Login" >
-                  <strong>Login</strong>
+                  <strong>Submit FTP Credentials</strong>
                </button>
                
             </center>
@@ -55,5 +66,4 @@
          
       </form>
       
-   </body>
-</html>
+{% endblock %}
