--- a/templates/sshinput.html
+++ b/templates/sshinput.html
@@ -1,7 +1,19 @@
+{% extends "base.html" %}
 
-<html>
-   <body>
-      
+{% block title %}SSH Credentials{% endblock %}
+
+{% block navbar_elements %}
+<li><a href="#">Overview</a></li>
+<li><a href="teamhome">Team Home</a></li>
+<li><a href="settings">Settings</a></li>
+{% endblock %}
+{% block navbar_right %}
+<li><a href="logout">Not {{ login_username }}? Logout</a></li>
+{% endblock %}
+
+{% block content %}
+<h3>Edit SSH Credentials</h3>
+
       <form name = "form" action = "sshSave" 
          method = "POST" >{% csrf_token %}
          
@@ -47,13 +59,11 @@
                <button style = "border:0px; background-color:#4285F4; margin-top:8%;
                   height:35px; width:80%;margin-left:19%;" type = "submit" 
                   value = "Login" >
-                  <strong>Login</strong>
+                  <strong>Submit SSH Credentials</strong>
                </button>
                
             </center>
          </div>
          
       </form>
-      
-   </body>
-</html>
+{% endblock %}
