--- a/templates/teamhome.html
+++ b/templates/teamhome.html
@@ -21,16 +21,18 @@
       <th>Username</th>
       <th>Password</th>
       <th>Port</th>
+      <th>Status</th>
     </tr>
   </thead>
   <tbody>
-	  {% for service in service_list %}
+	 {% for service in service_list %}
 	 <tr>
 	  <th scope="row"><a href="{{ service.servicename }}In">{{ service.servicename|upper }}</a></th>
       <td>{{ service.ip_address }}</td>
       <td>{{ service.username }}</td>
       <td>{{ service.password }}</td>
       <td>{{ service.port }}</td>
+      <td>{{ service.status }}</td>
     </tr>
     {% endfor %}
   </tbody>
